ndb - bug#47715 - ensure LQH_TRANSREQ is serialized correcttly wrt to NODE_FAILREP